# olmo

./: .env  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  analyze_petri_results.py  autorater.py  client.py  config_sft.yaml  data_clean.py  data_playground.py  dataset_exp.py  dpo_emb_cache.py  dpo_embedding_analysis.py  dpo_filter_data.py  dpo_filter_sweep.sh  dpo_svd.py  dpo_sweep_analysis.py  dpo_train.sh  dpo_train_profile.sh  eval_data_playground.py  feedback_v2_vector.py  filter.py  filter_autorater.py  filter_logprob.py  filter_petri_instructions.py  filter_vector.py  method_corr.py  method_corr_results.json  new_pairs.py  petri_no_tools_instructions.txt  plot_petri_variance.py  print_extreme_examples.py  prompts_false_beliefs_100.py  pyproject.toml  realise_dataset.py  run_bloom.py  run_dpo_evals.sh  run_eval.sh  run_evals.sh  (+10 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  zshrc-extra
bloom-data/: seed.yaml
dpo_analysis/: results.csv
synthetic_pairs/: false_beliefs_100.jsonl
vectors/Olmo-3-7B-Instruct-DPO/: sycophantic_prompt_avg_diff.pt  sycophantic_prompt_last_diff.pt  sycophantic_response_avg_diff.pt
vectors/Olmo-3-7B-Instruct-SFT/: sycophantic_prompt_avg_diff.pt  sycophantic_prompt_last_diff.pt  sycophantic_response_avg_diff.pt
vectors/feedback_v2_contrast_20260504_051537/: contrast_L23.pt
vllm_configs/: config_instr_dpo.yaml  config_instr_final.yaml  config_think_sft.yml
