[project]
name = "olmo-debug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "bloom",
    "petri",
]

[tool.uv.sources]
bloom = { path = "../bloom", editable = true }
petri = { path = "../petri", editable = true }
