[project]
name = "olmo-debug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "adjusttext>=1.3.0",
    "anthropic>=0.71.0",
    "datasets>=4.4.2",
    "deepspeed>=0.18.4",
    "fire>=0.7.1",
    "huggingface-hub>=0.36.0",
    "inspect-ai>=0.3.163",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jaxtyping>=0.2.0",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "openai>=2.15.0",
    "pandas>=2.0.0",
    "peft>=0.18.1",
    "scipy>=1.12.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "wandb>=0.23.1",
]
